--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@ web-build/
 
 # macOS
 .DS_Store
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
